--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "material-ui": "^0.20.2",
     "mdbreact": "^5.2.0",
     "mui": "^0.0.1",
+    "normalize.css": "^8.0.1",
     "react": "^18.1.0",
+    "react-animated-slider": "^2.0.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
