--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "jwt-decode": "^3.1.2",
     "material-ui": "^0.20.2",
     "mdbreact": "^5.2.0",
     "mui": "^0.0.1",
